--- a/test8/style.css
+++ b/test8/style.css
@@ -14,7 +14,7 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    background-image: url("/ingles/test6/assets/background.png");
+    background-image: url("/ingles/assets/background.png");
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
@@ -66,7 +66,7 @@ body {
     width: 120px;
     height: 120px;
     margin: 0 auto 12px;
-    background: url("/ingles/test6/assets/Tema.jpg") no-repeat center;
+    background: url("/ingles/assets/Tema.jpg") no-repeat center;
     background-size: contain;
     border-radius: 50%;
     border: 5px solid #f0dca5;
@@ -74,7 +74,7 @@ body {
 
 /* CAJA DE PREGUNTA */
 .question-box {
-    background: url("/ingles/test6/assets/pregunta.png") no-repeat center;
+    background: url("/ingles/assets/pregunta.png") no-repeat center;
     background-size: contain;
     padding: 26px 20px;
     margin-bottom: 20px;
@@ -95,7 +95,7 @@ body {
 
 /* BOTONES */
 .answer-btn {
-    background: url("/ingles/test6/assets/botonSimple.png") no-repeat center;
+    background: url("/ingles/assets/botonSimple.png") no-repeat center;
     background-size: contain;
     border: none;
     padding: 18px;
