--- a/test8/style.css
+++ b/test8/style.css
@@ -14,7 +14,7 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    background-image: url("/ingles/assets/background.png");
+    background-image: url("/ingles/assets/background.jpg");
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
